Update icon class for Analytics Overview link in layout

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         </li>
                         <li> 
                             <a asp-page="/MetricsOverview" class="nav-link"> 
-                                <i class="fa-thin fa-city nav-icon"></i>
+                                <i class="fas fa-city nav-icon"></i>
                                 <span class="nav-text">Analytics Overview</span> 
                             </a> 
                         </li>
